test/libsolidity/syntaxTests/using/undeclared_library.sol
using L for uint;
// ----
// DeclarationError 9589: (6-7): Identifier is not a library name.
